--- a/views/app.html
+++ b/views/app.html
@@ -25,6 +25,27 @@
 							<i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
 						</div>
 					</div>
+					<div class="row message" id="conversation">
+						<!-- <div class="row message-previous">
+							<div class="col-sm-12 previous">
+								<a onclick="previous(this)" id="ankitjain28" name="20">
+									Show Previous Message!
+								</a>
+							</div>
+						</div> -->
+						<div class="row message-body">
+							<div class="col-sm-12 message-main-receiver">
+								<div class="receiver">
+									<div class="message-text">
+										Asistente virtual <b> Comfenalco Valle </b>
+									</div>
+									<span class="message-time pull-right">
+										
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="row reply">
 						<div class="col-sm-8 col-xs-8 reply-main">
 							<textarea class="form-control" rows="2" id="comment" onkeypress="replyMain(event)"></textarea>
