--- a/views/app.html
+++ b/views/app.html
@@ -17,7 +17,7 @@
 							</div>
 						</div>
 						<div class="col-sm-6 col-xs-6 heading-name">
-							<a class="heading-name-meta">ASISTENTE VIRTUAL COMFENALCO VALLE
+							<a class="heading-name-meta">ASISTENTE VIRTUAL
 							</a>
 							<span class="heading-online">Online</span>
 						</div>
@@ -37,7 +37,7 @@
 							<div class="col-sm-12 message-main-receiver">
 								<div class="receiver">
 									<div class="message-text">
-										Asistente virtual <b> Comfenalco Valle </b>
+										<b> Comfenalco Valle </b>
 									</div>
 									<span class="message-time pull-right">
 										
