--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,12 +97,14 @@ body {
 }
 
 .heading-name-meta {
-  font-weight: 700;
-  font-size: 100%;
-  padding: 5px;
+  font-weight: 500;
+  font-size: 52%;
+  padding-top: 20px;
+  padding-right: 1px;
   padding-bottom: 0;
-  text-align: left;
-  text-overflow: ellipsis;
+  padding-left: 1px;
+  padding-bottom: 0;
+  text-align: center;
   white-space: nowrap;
   color: #000;
   display: block;
