--- a/views/app.html
+++ b/views/app.html
@@ -17,7 +17,7 @@
 							</div>
 						</div>
 						<div class="col-sm-6 col-xs-6 heading-name">
-							<a class="heading-name-meta">ASISTENTE VIRTUAL
+							<a class="heading-name-meta">BIENVENDIDO AL CHAT DE COMFENALCO VALLE
 							</a>
 							<span class="heading-online">Online</span>
 						</div>
