--- a/views/app.html
+++ b/views/app.html
@@ -37,7 +37,7 @@
 							<div class="col-sm-12 message-main-receiver">
 								<div class="receiver">
 									<div class="message-text">
-										<b> Hola, por favor dime tu nombre</b>
+										<b> HOLA, DIME TU NOMBRE POR FAVOR (Sólo letras)</b>
 									</div>
 									<span class="message-time pull-right">
 										
