--- a/views/app.html
+++ b/views/app.html
@@ -13,10 +13,10 @@
 					<div class="heading">
 						<div class="col-sm-6 col-md-3 col-xs-4 heading-avatar">
 							<div class="heading-avatar-icon">
-								<img src="images/comfenalco.png">
+								<img src="images/comfenalco.jpg">
 							</div>
 						</div>
-						<div class="col-sm-12 col-xs-12 heading-name">
+						<div class="col-sm-6 col-xs-6 heading-name">
 							<a class="heading-name-meta">BIENVENDIDO AL CHAT DE COMFENALCO VALLE
 							</a>
 							<span class="heading-online">Online</span>
